@@ -13,14 +13,7 @@ import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.sql.Statement;
 import java.sql.Timestamp;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Date;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.Hashtable;
-import java.util.Map;
-import java.util.Set;
+import java.util.*;
 
 import org.json.JSONArray;
 import org.json.JSONException;
@@ -41,13 +34,15 @@ import com.ibm.icu.util.ULocale;
  */
 public class SurveyForum {
 
+    private static final boolean ENABLE_AUTO_POSTING = true;
+
     private static final String FLAGGED_FOR_REVIEW_HTML = " <p>[This item was flagged for CLDR TC review.]";
 
-    private static java.util.logging.Logger logger = SurveyLog.forClass(SurveyForum.class);
+    private static final java.util.logging.Logger logger = SurveyLog.forClass(SurveyForum.class);
 
-    private static String DB_FORA = "sf_fora"; // forum name -> id
+    private static final String DB_FORA = "sf_fora"; // forum name -> id
 
-    private static String DB_LOC2FORUM = "sf_loc2forum"; // locale -> forum.. for selects.
+    private static final String DB_LOC2FORUM = "sf_loc2forum"; // locale -> forum.. for selects.
 
     private static final String F_FORUM = "forum";
 
@@ -80,7 +75,7 @@ public class SurveyForum {
             .replaceAll("&amp;", "&");
     }
 
-    private Hashtable<String, Integer> nameToNum = new Hashtable<>();
+    private final Hashtable<String, Integer> nameToNum = new Hashtable<>();
 
     private static final int BAD_FORUM = -1;
     private static final int NO_FORUM = -2;
@@ -97,14 +92,14 @@ public class SurveyForum {
             return NO_FORUM; // all forums
         }
         // make sure it is a valid src!
-        if ((forum == null) || (forum.indexOf('_') >= 0) || !sm.isValidLocale(CLDRLocale.getInstance(forum))) {
+        if (forum.indexOf('_') >= 0 || !sm.isValidLocale(CLDRLocale.getInstance(forum))) {
             return BAD_FORUM;
         }
         Integer i = nameToNum.get(forum);
         if (i == null) {
             return createForum(forum);
         } else {
-            return i.intValue();
+            return i;
         }
     }
 
@@ -151,10 +146,12 @@ public class SurveyForum {
                 PreparedStatement fAdd = null;
                 try {
                     conn = sm.dbUtils.getDBConnection();
-                    fAdd = prepare_fAdd(conn);
-                    fAdd.setString(1, forum);
-                    fAdd.executeUpdate();
-                    conn.commit();
+                    if (conn != null) {
+                        fAdd = prepare_fAdd(conn);
+                        fAdd.setString(1, forum);
+                        fAdd.executeUpdate();
+                        conn.commit();
+                    }
                 } finally {
                     DBUtils.close(fAdd, conn);
                 }
@@ -171,13 +168,11 @@ public class SurveyForum {
             throw new RuntimeException("Couldn't query ID for forum " + forum);
         }
         // Add to list
-        Integer i = Integer.valueOf(num);
-        nameToNum.put(forum, i);
+        nameToNum.put(forum, num);
         return num;
     }
 
-    private int gatherInterestedUsers(String forum, Set<Integer> cc_emails, Set<Integer> bcc_emails) {
-        int emailCount = 0;
+    private void gatherUsersInterestedInLocale(String forum, Set<Integer> cc_emails, Set<Integer> bcc_emails) {
         try {
             Connection conn = null;
             PreparedStatement pIntUsers = null;
@@ -199,7 +194,6 @@ public class SurveyForum {
                         } else {
                             bcc_emails.add(u.id);
                         }
-                        emailCount++;
                     }
                 }
             } finally {
@@ -212,22 +206,16 @@ public class SurveyForum {
             throw new RuntimeException(complaint);
         }
 
-        return emailCount;
     }
 
     /**
      * Send email notification to a set of users
      *
-     * @param ctx
-     * @param forum
-     * @param base_xpath
-     * @param subj
-     * @param text
-     * @param postId
-     *
      * Called by doPostInternal
      */
-    private void emailNotify(UserRegistry.User user, CLDRLocale locale, int base_xpath, String subj, String text, Integer postId) {
+    private void emailNotify(PostInfo postInfo, int postId) {
+        User user = postInfo.getUser();
+        CLDRLocale locale = postInfo.getLocale();
         String forum = localeToForum(locale);
         ElapsedTimer et = new ElapsedTimer("Sending email to " + forum);
         // Do email-
@@ -235,19 +223,44 @@ public class SurveyForum {
         Set<Integer> bcc_emails = new HashSet<>();
 
         // Collect list of users to send to.
-        gatherInterestedUsers(forum, cc_emails, bcc_emails);
+        gatherUsersInterestedInLocale(forum, cc_emails, bcc_emails);
+        gatherUsersInterestedInThread(postInfo, user, cc_emails);
 
-        String subject = "CLDR forum post (" + locale.getDisplayName() + " - " + locale + "): " + subj;
+        String subject = "CLDR forum post (" + locale.getDisplayName() + " - " + locale + "): " + postInfo.getSubj();
 
         String body = "Do not reply to this message, instead go to <"
             + CLDRConfig.getInstance().absoluteUrls().forSpecial(CLDRURLS.Special.Forum, locale, (String) null, Integer.toString(postId))
 
             + ">\n====\n\n"
-            + text;
+            + postInfo.getText();
 
-        logger.fine(et + ": Forum notify: u#" + user.id + " x" + base_xpath + " queueing cc:" + cc_emails.size() + " and bcc:" + bcc_emails.size());
+        logger.fine(et + ": Forum notify: u#" + user.id + " x" + postInfo.getPath() + " queueing cc:" + cc_emails.size() + " and bcc:" + bcc_emails.size());
 
-        MailSender.getInstance().queue(user.id, cc_emails, bcc_emails, HTMLUnsafe(subject), HTMLUnsafe(body), locale, base_xpath, postId);
+        MailSender.getInstance().queue(user.id, cc_emails, bcc_emails, HTMLUnsafe(subject), HTMLUnsafe(body), locale, postInfo.getPath(), postId);
+    }
+
+    /**
+     * Add users interested in this particular thread
+     *
+     * If this is a reply, add the user who started the thread, if they are not the current poster,
+     * and they are a TC member
+     *
+     * @param postInfo the new post
+     * @param currentUser the poster of the new post
+     * @param cc_emails the set of emails to which we may add
+     */
+    private void gatherUsersInterestedInThread(PostInfo postInfo, User currentUser, Set<Integer> cc_emails) {
+        if (postInfo.getReplyTo() < 0) {
+            return; // not a reply
+        }
+        final int rootPosterId = getUserId(postInfo.getRoot());
+        if (rootPosterId == currentUser.id) {
+            return; // don't notify the poster of their own action
+        }
+        UserRegistry.User rootPoster = sm.reg.getInfo(rootPosterId);
+        if (UserRegistry.userIsTC(rootPoster)) {
+            cc_emails.add(rootPosterId);
+        }
     }
 
     /**
@@ -255,17 +268,16 @@ public class SurveyForum {
      * This was already checked on the client, but don't trust the client too much.
      * Check on server as well, at least to prevent someone closing a post who shouldn't be allowed to.
      *
-     * @param user the current user
-     * @param postType the PostType
-     * @param replyTo the post id of the parent, or NO_PARENT
+     * @param postInfo the PostInfo
      * @return true or false
-     *
-     * @throws SurveyException
      */
-    private boolean userCanUsePostType(User user, PostType postType, int replyTo) throws SurveyException {
+    private boolean userCanUsePostType(PostInfo postInfo) {
         if (SurveyMain.isPhaseReadonly()) {
             return false;
         }
+        int replyTo = postInfo.getReplyTo();
+        PostType postType = postInfo.getType();
+        User user = postInfo.getUser();
         if (postType == PostType.DISCUSS && replyTo == NO_PARENT && !UserRegistry.userIsTC(user)) {
             return false; // only TC can initiate Discuss; others can reply
         }
@@ -275,48 +287,36 @@ public class SurveyForum {
         if (replyTo == NO_PARENT) {
             return false; // first post can't begin as closed
         }
-        if (getFirstPosterInThread(replyTo) == user.id) {
+        if (getUserId(postInfo.getRoot()) == user.id) {
             return true;
         }
-        if (UserRegistry.userIsTC(user)) {
-            return true;
-        }
-        return false;
+        return UserRegistry.userIsTC(user);
     }
 
     /**
-     * Get the user id of the first poster in the thread containing this post
+     * Get the user id of the poster of this post
      *
-     * @param postId
+     * @param postId the post id
      * @return the user id, or UserRegistry.NO_USER
-     *
-     * @throws SurveyException
      */
-    private int getFirstPosterInThread(int postId) throws SurveyException {
+    private int getUserId(int postId) {
         int posterId = UserRegistry.NO_USER;
         Connection conn = null;
         PreparedStatement pList = null;
         try {
             conn = sm.dbUtils.getAConnection();
-            pList = DBUtils.prepareStatement(conn, "pList", "SELECT parent,poster FROM " + DBUtils.Table.FORUM_POSTS.toString()
-                + " WHERE id=?");
-            for (;;) {
+            if (conn != null) {
+                pList = DBUtils.prepareStatement(conn, "pList", "SELECT poster FROM " + DBUtils.Table.FORUM_POSTS
+                    + " WHERE id=?");
                 pList.setInt(1, postId);
                 ResultSet rs = pList.executeQuery();
-                int parentId = NO_PARENT;
                 while (rs.next()) {
-                    parentId = rs.getInt(1);
-                    posterId = rs.getInt(2);
+                    posterId = rs.getInt(1);
                 }
-                if (parentId == NO_PARENT) {
-                    break;
-                }
-                postId = parentId;
             }
-         } catch (SQLException se) {
-            String complaint = "SurveyForum: Couldn't get parent for post - " + DBUtils.unchainSqlException(se);
+        } catch (SQLException se) {
+            String complaint = "SurveyForum: Couldn't get poster for post - " + DBUtils.unchainSqlException(se);
             SurveyLog.logException(logger, se, complaint);
-            throw new SurveyException(ErrorCode.E_INTERNAL, complaint);
         } finally {
             DBUtils.close(pList, conn);
         }
@@ -379,10 +379,10 @@ public class SurveyForum {
      * @throws SQLException
      */
     private void reloadLocales(Connection conn) throws SQLException {
-        String sql = "";
+        String sql;
         synchronized (conn) {
             Statement s = conn.createStatement();
-            if (!DBUtils.hasTable(conn, DB_LOC2FORUM)) { // user attribute
+            if (!DBUtils.hasTable(DB_LOC2FORUM)) { // user attribute
                 sql = "CREATE TABLE " + DB_LOC2FORUM + " ( " + " locale VARCHAR(255) NOT NULL, "
                     + " forum VARCHAR(255) NOT NULL" + " )";
                 s.execute(sql);
@@ -426,7 +426,7 @@ public class SurveyForum {
         try {
             oldOnOrBefore = sdf.parse(onOrBefore);
         } catch (Throwable t) {
-            System.err.println("Error in parsing CLDR_OLD_POSTS_BEFORE : " + onOrBefore + " - err " + t.toString());
+            System.err.println("Error in parsing CLDR_OLD_POSTS_BEFORE : " + onOrBefore + " - err " + t);
             t.printStackTrace();
             oldOnOrBefore = null;
         }
@@ -434,13 +434,13 @@ public class SurveyForum {
             oldOnOrBefore = new Date(0);
         }
         logger.fine("CLDR_OLD_POSTS_BEFORE: date: " + sdf.format(oldOnOrBefore) + " (format: mm/dd/yy)");
-        String sql = null;
+        String sql;
         String locindex = "loc";
         if (DBUtils.db_Mysql) {
             locindex = "loc(122)";
         }
 
-        if (!DBUtils.hasTable(conn, DB_FORA)) { // user attribute
+        if (!DBUtils.hasTable(DB_FORA)) { // user attribute
             Statement s = conn.createStatement();
             sql = "CREATE TABLE " + DB_FORA + " ( " + " id INT NOT NULL " + DBUtils.DB_SQL_IDENTITY
                 + ", "
@@ -450,11 +450,10 @@ public class SurveyForum {
                 + DBUtils.DB_SQL_CURRENT_TIMESTAMP0 + ", " + " last_time TIMESTAMP NOT NULL " + DBUtils.DB_SQL_WITHDEFAULT
                 + " CURRENT_TIMESTAMP" + " )";
             s.execute(sql);
-            sql = "";
             s.close();
             conn.commit();
         }
-        if (!DBUtils.hasTable(conn, DBUtils.Table.FORUM_POSTS.toString())) {
+        if (!DBUtils.hasTable(DBUtils.Table.FORUM_POSTS.toString())) {
             Statement s = conn.createStatement();
             sql = "CREATE TABLE " + DBUtils.Table.FORUM_POSTS + " ( " + " id INT NOT NULL "
                 + DBUtils.DB_SQL_IDENTITY + ", "
@@ -484,14 +483,14 @@ public class SurveyForum {
             s.execute(sql);
             sql = "CREATE INDEX " + DBUtils.Table.FORUM_POSTS + "_x ON " + DBUtils.Table.FORUM_POSTS + " (xpath) ";
             s.execute(sql);
-            sql = "";
             s.close();
             conn.commit();
         }
         reloadLocales(conn);
+        SurveyThreadManager.getExecutorService().submit(() -> new SurveyForumCheck(sm).run());
     }
 
-    private SurveyMain sm = null;
+    private final SurveyMain sm;
 
     private static PreparedStatement prepare_fGetByLoc(Connection conn) throws SQLException {
         return DBUtils.prepareStatement(conn, "fGetByLoc", "SELECT id FROM " + DB_FORA + " where loc=?");
@@ -512,7 +511,7 @@ public class SurveyForum {
      */
     private static PreparedStatement prepare_pAdd(Connection conn) throws SQLException {
         return DBUtils.prepareStatement(conn, "pAdd", "INSERT INTO "
-            + DBUtils.Table.FORUM_POSTS.toString()
+            + DBUtils.Table.FORUM_POSTS
             + " (poster,subj,text,forum,parent,loc,xpath,version,root,type,is_open,value)"
             + " values (?,?,?,?,?,?,?,?,?,?,?,?)");
     }
@@ -526,7 +525,7 @@ public class SurveyForum {
      */
     private static PreparedStatement prepare_pCloseThread(Connection conn) throws SQLException {
         return DBUtils.prepareStatement(conn, "pCloseThread", "UPDATE "
-            + DBUtils.Table.FORUM_POSTS.toString()
+            + DBUtils.Table.FORUM_POSTS
             + " SET is_open=FALSE WHERE id=? OR root=?");
     }
 
@@ -571,12 +570,13 @@ public class SurveyForum {
         String tableName = DBUtils.Table.FORUM_POSTS.toString();
         try {
             conn = DBUtils.getInstance().getAConnection();
-
+            if (conn == null) {
+                return 0;
+            }
             ps = DBUtils.prepareForwardReadOnly(conn, "select count(*) from " + tableName + " where loc=? and xpath=?");
             ps.setString(1, locale.getBaseName());
             ps.setInt(2, xpathId);
-
-            return DBUtils.sqlCount(null, conn, ps);
+            return DBUtils.sqlCount(ps);
         } catch (SQLException e) {
             SurveyLog.logException(logger, e, "postCountFor for " + tableName + " " + locale + ":" + xpathId);
             return 0;
@@ -608,7 +608,7 @@ public class SurveyForum {
             Connection conn = null;
             try {
                 conn = sm.dbUtils.getAConnection();
-                Object[][] o = null;
+                Object[][] o;
                 final String forumPosts = DBUtils.Table.FORUM_POSTS.toString();
                 if (ident == 0) {
                     if (base_xpath == 0) {
@@ -642,58 +642,56 @@ public class SurveyForum {
                             + ".last_time DESC", forumNumber, base_xpath, ident);
                     }
                 }
-                if (o != null) {
-                    for (int i = 0; i < o.length; i++) {
-                        int poster = (Integer) o[i][0];
-                        String subj2 = (String) o[i][1];
-                        String text2 = (String) o[i][2];
-                        Timestamp lastDate = (Timestamp) o[i][3];
-                        int id = (Integer) o[i][4];
-                        int parent = (Integer) o[i][5];
-                        int xpath = (Integer) o[i][6];
-                        String loc = (String) o[i][7];
-                        String version = (String) o[i][8];
-                        int root = (int) o[i][9];
-                        int typeInt = (int) o[i][10];
-                        boolean open = (boolean) o[i][11];
-                        String value = (String) o[i][12];
+                for (Object[] objects : o) {
+                    int poster = (Integer) objects[0];
+                    String subj2 = (String) objects[1];
+                    String text2 = (String) objects[2];
+                    Timestamp lastDate = (Timestamp) objects[3];
+                    int id = (Integer) objects[4];
+                    int parent = (Integer) objects[5];
+                    int xpath = (Integer) objects[6];
+                    String loc = (String) objects[7];
+                    String version = (String) objects[8];
+                    int root = (int) objects[9];
+                    int typeInt = (int) objects[10];
+                    boolean open = (boolean) objects[11];
+                    String value = (String) objects[12];
 
-                        PostType type = PostType.fromInt(typeInt, PostType.DISCUSS);
+                    PostType type = PostType.fromInt(typeInt, PostType.DISCUSS);
 
-                        if (lastDate.after(oldOnOrBefore)) {
-                            JSONObject post = new JSONObject();
-                            post.put("poster", poster)
-                                .put("subject", subj2)
-                                .put("text", text2)
-                                .put("postType", type.toName())
-                                .put("date", lastDate)
-                                .put("date_long", lastDate.getTime())
-                                .put("id", id)
-                                .put("parent", parent);
-                            if (loc != null) {
-                                post.put("locale", loc);
-                            }
-                            if (version != null) {
-                                post.put("version", version);
-                            }
-                            if (value != null) {
-                                post.put("value", value);
-                            }
-                            post.put("open", open);
-                            post.put("root", root);
-                            post.put("xpath_id", xpath);
-                            if (xpath > 0) {
-                                post.put("xpath", sm.xpt.getStringIDString(xpath));
-                            }
-                            UserRegistry.User posterUser = sm.reg.getInfo(poster);
-                            if (posterUser != null) {
-                                JSONObject posterInfoJson = SurveyJSONWrapper.wrap(posterUser);
-                                if (posterInfoJson != null) {
-                                    post.put("posterInfo", posterInfoJson);
-                                }
-                            }
-                            ret.put(post);
+                    if (lastDate.after(oldOnOrBefore)) {
+                        JSONObject post = new JSONObject();
+                        post.put("poster", poster)
+                            .put("subject", subj2)
+                            .put("text", text2)
+                            .put("postType", type.toName())
+                            .put("date", lastDate)
+                            .put("date_long", lastDate.getTime())
+                            .put("id", id)
+                            .put("parent", parent);
+                        if (loc != null) {
+                            post.put("locale", loc);
                         }
+                        if (version != null) {
+                            post.put("version", version);
+                        }
+                        if (value != null) {
+                            post.put("value", value);
+                        }
+                        post.put("open", open);
+                        post.put("root", root);
+                        post.put("xpath_id", xpath);
+                        if (xpath > 0) {
+                            post.put("xpath", sm.xpt.getStringIDString(xpath));
+                        }
+                        User posterUser = sm.reg.getInfo(poster);
+                        if (posterUser != null) {
+                            JSONObject posterInfoJson = SurveyJSONWrapper.wrap(posterUser);
+                            if (posterInfoJson != null) {
+                                post.put("posterInfo", posterInfoJson);
+                            }
+                        }
+                        ret.put(post);
                     }
                 }
                 return ret;
@@ -751,12 +749,7 @@ public class SurveyForum {
      * Respond when the user adds a new forum post.
      *
      * @param mySession the CookieSession
-     * @param xpath of the form "stringid" or "#1234"
-     * @param l the CLDRLocale
-     * @param subj the subject of the post
-     * @param text the text of the post
-     * @param postTypeStr the PostType string such as "Close", or null
-     * @param replyTo the id of the post to which this is a reply; {@link #NO_PARENT} if there is no parent
+     * @param postInfo the PostInfo
      * @return the post id
      *
      * @throws SurveyException
@@ -767,7 +760,6 @@ public class SurveyForum {
         int replyTo = postInfo.getReplyTo();
         int base_xpath;
         if (replyTo < 0) {
-            replyTo = NO_PARENT;
             base_xpath = sm.xpt.getXpathIdOrNoneFromStringID(postInfo.getPathStr());
         } else {
             base_xpath = DBUtils.sqlCount("select xpath from " + DBUtils.Table.FORUM_POSTS + " where id=?", replyTo); // default to -1
@@ -805,7 +797,6 @@ public class SurveyForum {
                     + locale + " " + distinguishingXpath);
             }
         }
-        final boolean ENABLE_AUTO_POSTING = true;
         if (ENABLE_AUTO_POSTING) {
             if (value != null) {
                 autoPostAgree(locale, user, xpathId, value);
@@ -848,9 +839,12 @@ public class SurveyForum {
         Map<Integer, String> posts = new HashMap<>();
         try {
             conn = sm.dbUtils.getAConnection();
+            if (conn == null) {
+                return;
+            }
             pList = DBUtils.prepareStatement(conn, "pList",
                 "SELECT id,subj FROM " + tableName
-                + " WHERE is_open=true AND type=? AND loc=? AND xpath=? AND value=? AND NOT poster=?");
+                    + " WHERE is_open=true AND type=? AND loc=? AND xpath=? AND value=? AND NOT poster=?");
             pList.setInt(1, PostType.REQUEST.toInt());
             pList.setString(2, locale.toString());
             pList.setInt(3, xpathId);
@@ -904,19 +898,21 @@ public class SurveyForum {
         Map<Integer, String> posts = new HashMap<>();
         try {
             conn = sm.dbUtils.getAConnection();
-            pList = DBUtils.prepareStatement(conn, "pList",
-                "SELECT root,subj FROM " + tableName
-                + " WHERE is_open=true AND type=? AND loc=? AND xpath=? AND poster=? AND NOT value=?");
-            pList.setInt(1, PostType.AGREE.toInt());
-            pList.setString(2, locale.toString());
-            pList.setInt(3, xpathId);
-            pList.setInt(4, user.id);
-            DBUtils.setStringUTF8(pList, 5, dbValue);
-            ResultSet rs = pList.executeQuery();
-            while (rs.next()) {
-                posts.put(rs.getInt(1), DBUtils.getStringUTF8(rs, 2));
+            if (conn != null) {
+                pList = DBUtils.prepareStatement(conn, "pList",
+                    "SELECT root,subj FROM " + tableName
+                    + " WHERE is_open=true AND type=? AND loc=? AND xpath=? AND poster=? AND NOT value=?");
+                pList.setInt(1, PostType.AGREE.toInt());
+                pList.setString(2, locale.toString());
+                pList.setInt(3, xpathId);
+                pList.setInt(4, user.id);
+                DBUtils.setStringUTF8(pList, 5, dbValue);
+                ResultSet rs = pList.executeQuery();
+                while (rs.next()) {
+                    posts.put(rs.getInt(1), DBUtils.getStringUTF8(rs, 2));
+                }
+                posts.forEach((root, subject) -> autoPostReplyDecline(root, subject, locale, user, xpathId, value));
             }
-            posts.forEach((root, subject) -> autoPostReplyDecline(root, subject, locale, user, xpathId, value));
          } catch (SQLException se) {
             String complaint = "SurveyForum: autoPostDecline - " + DBUtils.unchainSqlException(se);
             SurveyLog.logException(logger, se, complaint);
@@ -961,19 +957,21 @@ public class SurveyForum {
         Map<Integer, String> posts = new HashMap<>();
         try {
             conn = sm.dbUtils.getAConnection(); // readonly
-            pList = DBUtils.prepareStatement(conn, "pList",
-                "SELECT id,subj FROM " + tableName
-                + " WHERE is_open=true AND type=? AND loc=? AND xpath=? AND poster=? AND NOT value=?");
-            pList.setInt(1, PostType.REQUEST.toInt());
-            pList.setString(2, locale.toString());
-            pList.setInt(3, xpathId);
-            pList.setInt(4, user.id);
-            DBUtils.setStringUTF8(pList, 5, dbValue);
-            ResultSet rs = pList.executeQuery();
-            while (rs.next()) {
-                posts.put(rs.getInt(1), DBUtils.getStringUTF8(rs, 2));
+            if (conn != null) {
+                pList = DBUtils.prepareStatement(conn, "pList",
+                    "SELECT id,subj FROM " + tableName
+                    + " WHERE is_open=true AND type=? AND loc=? AND xpath=? AND poster=? AND NOT value=?");
+                pList.setInt(1, PostType.REQUEST.toInt());
+                pList.setString(2, locale.toString());
+                pList.setInt(3, xpathId);
+                pList.setInt(4, user.id);
+                DBUtils.setStringUTF8(pList, 5, dbValue);
+                ResultSet rs = pList.executeQuery();
+                while (rs.next()) {
+                    posts.put(rs.getInt(1), DBUtils.getStringUTF8(rs, 2));
+                }
+                posts.forEach((root, subject) -> autoPostReplyClose(root, subject, locale, user, xpathId, value));
             }
-            posts.forEach((root, subject) -> autoPostReplyClose(root, subject, locale, user, xpathId, value));
          } catch (SQLException se) {
             String complaint = "SurveyForum: autoPostClose - " + DBUtils.unchainSqlException(se);
             SurveyLog.logException(logger, se, complaint);
@@ -1013,19 +1011,17 @@ public class SurveyForum {
      */
     private Integer doPostInternal(PostInfo postInfo) throws SurveyException {
         if (!postInfo.isValid()) {
-            SurveyLog.errln("Invalid postInfo in SurveyForum.doPostInternal");
+            logger.severe("Invalid postInfo in SurveyForum.doPostInternal");
             return 0;
         }
-        PostType postType = postInfo.getType();
-        User user = postInfo.getUser();
-        if (!userCanUsePostType(user, postType, postInfo.getReplyTo())) {
-            SurveyLog.errln("Post not allowed in SurveyForum.doPostInternal");
+        if (!userCanUsePostType(postInfo)) {
+            logger.severe("Post not allowed in SurveyForum.doPostInternal");
             return 0;
         }
         int postId = savePostToDb(postInfo);
 
         if (postInfo.getSendEmail()) {
-            emailNotify(user, postInfo.getLocale(), postInfo.getPath(), postInfo.getSubj(), postInfo.getText(), postId);
+            emailNotify(postInfo, postId);
         }
         return postId;
     }
@@ -1034,18 +1030,18 @@ public class SurveyForum {
      * Save a new post to the FORUM_POSTS table; if it's a CLOSE post,
      * also set is_open=false for all posts in this thread
      *
-     * @param PostInfo the post info
+     * @param postInfo the post info
      * @return the new post id, or <= 0 for failure
      * @throws SurveyException
      */
     private int savePostToDb(PostInfo postInfo) throws SurveyException {
-        int postId = 0;
+        int postId;
         final CLDRLocale locale = postInfo.getLocale();
         final String localeStr = locale.toString();
         final int forumNumber = getForumNumber(locale);
         final User user = postInfo.getUser();
         final PostType type = postInfo.getType();
-        final boolean open = (type == PostType.CLOSE) ? false : postInfo.getOpen();
+        final boolean open = type != PostType.CLOSE && postInfo.getOpen();
         final int root = postInfo.getRoot();
         final String text = postInfo.getText().replaceAll("\r", "").replaceAll("\n", "<p>");
         try {
@@ -1054,7 +1050,7 @@ public class SurveyForum {
             try {
                 conn = sm.dbUtils.getDBConnection();
                 if (type == PostType.CLOSE) {
-                    closeThreads(conn, new ArrayList<>(Arrays.asList(root)));
+                    closeThreads(conn, new ArrayList<>(List.of(root)));
                 }
                 pAdd = prepare_pAdd(conn);
                 pAdd.setInt(1, user.id);
@@ -1073,10 +1069,12 @@ public class SurveyForum {
                 int n = pAdd.executeUpdate();
                 if (postInfo.couldFlagOnLosing()) {
                     sm.getSTFactory().setFlag(conn, locale, postInfo.getPath(), user);
-                    System.out.println("NOTE: flag was set on " + localeStr + " by " + user.toString());
+                    System.out.println("NOTE: flag was set on " + localeStr + " by " + user);
                 }
 
-                conn.commit();
+                if (conn != null) {
+                    conn.commit();
+                }
                 postId = DBUtils.getLastId(pAdd);
 
                 if (n != 1) {
@@ -1132,7 +1130,7 @@ public class SurveyForum {
 
     public class PostInfo {
         private final CLDRLocale locale;
-        private PostType type;
+        private final PostType type;
         private String text;
         private int xpathId = XPathTable.NO_XPATH;
         private String pathString = null;
